--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.Game"
-            prefHeight="800.0" prefWidth="1000.0">
 
+<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
+   <children>
+      <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1000.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.3333435058594" minWidth="10.0" prefWidth="208.66668701171875" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextArea fx:id="sideText" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+            <Button mnemonicParsing="false" onAction="#addText" prefHeight="140.0" prefWidth="212.0" text="Prueba" />
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
