--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -6,23 +6,29 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="paneBoard" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
+<AnchorPane fx:id="paneBoard" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
    <children>
-      <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1000.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
+      <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="395.0" minHeight="6.0" prefHeight="28.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="794.0" minHeight="10.0" prefHeight="772.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#inicioJuego" prefHeight="140.0" prefWidth="212.0" text="Prueba" />
-            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <Button mnemonicParsing="false" onAction="#startGame" prefHeight="140.0" prefWidth="212.0" text="Begin" GridPane.columnIndex="2">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font></Button>
+            <ScrollPane prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <content>
-                  <Text fx:id="sideText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="JUSTIFY" wrappingWidth="204.0" />
+                  <Text fx:id="sideText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY" wrappingWidth="199.0" />
                </content>
             </ScrollPane>
          </children>
