--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -10,28 +10,29 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="paneBoard" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
-   <children>
-      <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="395.0" minHeight="6.0" prefHeight="28.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="794.0" minHeight="10.0" prefHeight="772.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" onAction="#startGame" prefHeight="140.0" prefWidth="212.0" text="Begin" GridPane.columnIndex="2">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font></Button>
-            <ScrollPane prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <content>
-                  <Text fx:id="sideText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY" wrappingWidth="199.0" />
-               </content>
-            </ScrollPane>
-         </children>
-      </GridPane>
-   </children>
+    <children>
+        <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="395.0" minHeight="6.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="794.0" minHeight="10.0" prefHeight="772.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button mnemonicParsing="false" onAction="#startGame" prefHeight="140.0" prefWidth="212.0" text="Begin" GridPane.columnIndex="2">
+                    <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                    </font></Button>
+                <ScrollPane prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <content>
+                        <Text fx:id="sideText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY" wrappingWidth="199.0" />
+                    </content>
+                </ScrollPane>
+                <Button mnemonicParsing="false" onAction="#print" text="Button" GridPane.rowIndex="1" />
+            </children>
+        </GridPane>
+    </children>
 </AnchorPane>
