--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,6 +12,8 @@
 
 <AnchorPane fx:id="paneBoard" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
     <children>
+      <ImageView fx:id= "background1" fitHeight="800.0" fitWidth="2000.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id= "background2" fitHeight="800.0" fitWidth="2000.0" pickOnBounds="true" preserveRatio="true" x="2000.0" />
         <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
