--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,26 +11,31 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="paneBoard" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
+<AnchorPane fx:id="paneBoard" maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Game">
     <children>
-      <ImageView fx:id= "background1" fitHeight="800.0" fitWidth="2000.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id= "background2" fitHeight="800.0" fitWidth="2000.0" pickOnBounds="true" preserveRatio="true" x="2000.0" />
-        <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-1.0">
+      <ImageView fx:id="background1" fitHeight="800.0" fitWidth="1200.0" pickOnBounds="true">
+         <image>
+            <Image url="@../Media/Stages/CastleStage.png" />
+         </image></ImageView>
+      <ImageView fx:id="background2" fitHeight="800.0" fitWidth="1200.0" pickOnBounds="true" x="1200.0">
+         <image>
+            <Image url="@../Media/Stages/CastleStage.png" />
+         </image></ImageView>
+        <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="834.0" minWidth="10.0" prefWidth="791.3333129882812" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1034.0" minWidth="10.0" prefWidth="1002.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="56.0" prefWidth="198.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="395.0" minHeight="6.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="794.0" minHeight="10.0" prefHeight="772.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="395.0" minHeight="6.0" prefHeight="48.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="794.0" minHeight="10.0" prefHeight="752.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" onAction="#startGame" prefHeight="140.0" prefWidth="212.0" text="Begin" GridPane.columnIndex="2">
+                <Button mnemonicParsing="false" onAction="#startGame" prefHeight="140.0" prefWidth="212.0" text="Begin" GridPane.columnIndex="1">
                     <font>
                         <Font name="System Bold Italic" size="12.0" />
                     </font></Button>
-                <ScrollPane prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                <ScrollPane prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <content>
                         <Text fx:id="sideText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY" wrappingWidth="199.0" />
                     </content>
