--- a/src/GUI/Board.fxml
+++ b/src/GUI/Board.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -23,7 +25,7 @@
          </image></ImageView>
         <GridPane layoutX="-1.0" layoutY="-1.0" prefHeight="800.0" prefWidth="1200.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1034.0" minWidth="10.0" prefWidth="1002.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1034.0" minWidth="10.0" prefWidth="1004.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="56.0" prefWidth="198.0" />
             </columnConstraints>
             <rowConstraints>
@@ -41,6 +43,30 @@
                     </content>
                 </ScrollPane>
                 <Button mnemonicParsing="false" onAction="#print" text="Button" GridPane.rowIndex="1" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label fx:id="livesLeftTxt" alignment="CENTER" minHeight="48.0" prefHeight="48.0" prefWidth="251.0" text="Lives left: 10">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="enemiesLeftTxt" alignment="CENTER" minHeight="48.0" prefHeight="48.0" prefWidth="251.0" text="Enemies left:">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="levelTxt" alignment="CENTER" minHeight="48.0" prefHeight="48.0" prefWidth="153.0" text="Level: ">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="currentOrderTxt" alignment="CENTER" minHeight="48.0" prefHeight="48.0" prefWidth="350.0" text="Current order:">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             </children>
         </GridPane>
     </children>
